recursion.lessons.recursion.polygonfractal.PolygonFractal.scala.error
PolygonFractal:6: error: not found: value lenght
	avance(lenght)
               ^PolygonFractal:8: error: not found: value lenght
	avance(lenght)
               ^